--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,6 +74,27 @@ h4 {
   line-height: 1.7;
 }
 
+@media screen and (min-width: 992px) {
+  html {
+    font-size: 100%;
+  }
+  main {
+    gap: 5.25rem;
+  }
+  .wrapper {
+    padding-inline: 0px;
+    max-width: 960px;
+    margin-inline: auto;
+  }
+  .section-header {
+    max-width: 640px;
+    margin-inline: auto;
+  }
+  .section-title {
+    font-size: 2.5rem;
+  }
+}
+
 /* header section */
 .header {
   height: 64px;
@@ -134,6 +155,18 @@ h4 {
   width: 100%;
   border-radius: 5px;
   background: #000;
+}
+
+@media screen and (min-width: 992px) {
+  .header {
+    height: 100px;
+  }
+  .nav-menu {
+    display: flex;
+  }
+  .mobile-menu {
+    display: none;
+  }
 }
 
 /* hero section */
@@ -219,6 +252,27 @@ h4 {
 .search-icon {
   width: 1rem;
 }
+@media screen and (min-width: 992px) {
+  .hero-section {
+    padding: 5rem;
+  }
+  .hero-content {
+    max-width: 700px;
+    margin-inline: auto;
+  }
+  .hero-form {
+    width: 100%;
+    max-width: 700px;
+    margin-inline: auto;
+    flex-direction: row;
+  }
+  .hero-form > * {
+    width: 25%;
+  }
+  .hero-title {
+    font-size: 4rem;
+  }
+}
 
 /* popular tour */
 .popular-tour-section {
@@ -253,8 +307,28 @@ h4 {
   width: 100%;
   border-radius: 1rem;
 }
+@media screen and (min-width: 992px) {
+  .popular-tour-section {
+    flex-direction: row;
+    gap: 3rem;
+  }
+  .popular-tour-section > * {
+    flex-basis: 1 1 50%;
+    width: 50%;
+  }
+  .popular-tour-content {
+    gap: 1.6rem;
+  }
+  .popular-tour-title {
+    font-size: 2.35rem;
+  }
+}
 
 /* destination */
+.destination-grid {
+  display: grid;
+  gap: 1rem;
+}
 .destination-item {
   position: relative;
   aspect-ratio: 16 / 9;
@@ -284,9 +358,85 @@ h4 {
   left: 50%;
   translate: -50% -50%;
 }
-.destination-grid {
-  display: grid;
+@media screen and (min-width: 992px) {
+  .destination-grid {
+    grid-template-columns: repeat(12, 1fr);
+    gap: 1.2rem;
+  }
+  .destination-item {
+    height: 240px;
+    aspect-ratio: unset;
+  }
+  .destination-item:nth-child(1) {
+    grid-column: span 6;
+  }
+  .destination-item:nth-child(2) {
+    grid-column: span 6;
+  }
+  .destination-item:nth-child(3) {
+    grid-column: span 4;
+  }
+  .destination-item:nth-child(4) {
+    grid-column: span 5;
+  }
+  .destination-item:nth-child(5) {
+    grid-column: span 3;
+  }
+  .destination-item:nth-child(6) {
+    grid-column: span 5;
+  }
+  .destination-item:nth-child(7) {
+    grid-column: span 7;
+  }
+}
+
+/* blog */
+.blog-block {
+  display: flex;
+  flex-direction: column;
   gap: 1rem;
+}
+.blog-card {
+  width: 100%;
+  border: 1px solid var(--primary-color);
+  border-radius: 1rem;
+  overflow: hidden;
+}
+.blog-img {
+  aspect-ratio: 16 / 9;
+  display: block;
+  object-fit: cover;
+  object-position: center;
+}
+.blog-content {
+  padding: 1.2rem;
+  padding-top: 1rem;
+}
+.blog-meta-block {
+  display: flex;
+  gap: 2rem;
+  align-items: center;
+  list-style: none;
+  font-size: 0.9rem;
+  margin-bottom: 0.6rem;
+}
+.blog-meta {
+  display: flex;
+  gap: 0.5rem;
+  align-items: center;
+}
+.blog-meta-icon {
+  width: 1rem;
+}
+.blog-title {
+  font-size: 1.1rem;
+}
+@media screen and (min-width: 992px) {
+  .blog-block {
+    display: flex;
+    flex-direction: row;
+    gap: 1.2rem;
+  }
 }
 
 /* choose us */
@@ -328,52 +478,30 @@ h4 {
   border-color: #fad2d2;
   background-color: #fef6f6;
 }
-
-/* blog */
-.blog-card {
-  border: 1px solid var(--primary-color);
-  border-radius: 1rem;
-  overflow: hidden;
-}
-.blog-block {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-}
-.blog-img {
-  aspect-ratio: 16 / 9;
-  display: block;
-  object-fit: cover;
-  object-position: center;
-}
-.blog-content {
-  padding: 1.2rem;
-  padding-top: 1rem;
-}
-.blog-meta-block {
-  display: flex;
-  gap: 2rem;
-  align-items: center;
-  list-style: none;
-  font-size: 0.9rem;
-  margin-bottom: 0.6rem;
-}
-.blog-meta {
-  display: flex;
-  gap: 0.5rem;
-  align-items: center;
-}
-.blog-meta-icon {
-  width: 1rem;
-}
-.blog-title {
-  font-size: 1.1rem;
+@media screen and (min-width: 992px) {
+  .choose-us-outer {
+    --space: 1.2rem;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 0;
+    row-gap: var(--space);
+    align-items: stretch;
+    justify-content: center;
+    margin-inline: calc(var(--space) / -2);
+  }
+  .choose-us-inner {
+    width: 50%;
+    flex: 0 0 50%;
+    padding-inline: calc(var(--space) / 2);
+  }
+  .choose-us-card {
+    height: 100%;
+  }
 }
 
 /* newsletter */
 .newsletter-section {
-  display: flex;
-  flex-direction: column;
+  display: grid;
   gap: 1rem;
 }
 .newsletter-form {
@@ -441,11 +569,26 @@ h4 {
   font-size: 1.2rem;
   font-weight: 800;
 }
+@media screen and (min-width: 992px) {
+  .newsletter-section {
+    grid-template-columns: repeat(12, 1fr);
+    gap: 1.2rem;
+  }
+  .newsletter-section > *:nth-child(1) {
+    grid-column: span 5;
+  }
+  .newsletter-section > *:nth-child(2) {
+    grid-column: span 7;
+  }
+  .newsletter-img-block {
+    aspect-ratio: unset;
+  }
+}
 
 /* footer */
 .footer {
   background: var(--footer-bg-color);
-  margin-top: 1.5rem;
+  margin-top: 2rem;
   padding-block: 2rem;
   text-align: center;
 }
@@ -481,4 +624,21 @@ h4 {
 }
 .footer-copyright {
   margin-top: 1.2rem;
+}
+@media screen and (min-width: 992px) {
+  .footer {
+    margin-top: 5.25rem;
+    padding-block: 5.25rem;
+  }
+  .footer-content {
+    max-width: 820px;
+    margin-inline: auto;
+  }
+  .footer-text,
+  .footer-social-media {
+    margin-bottom: 2rem;
+  }
+  .footer-copyright {
+    margin-top: 2rem;
+  }
 }
